Fix navigation for popup menu

This CL fixes the navigation using the popup menu.
The navigation was crashing because the command protocol is only
implemented by the legacy class.

Bug: 833120
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I31268facd31c035a4bb0ff72d6d235f9789a8d14
Reviewed-on: https://chromium-review.googlesource.com/1013977
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550953}
Former-commit-id: efec89ca5923c385cf3aaf1a682c8f522e0830d8